# resume_modifier

./: .gitignore  README.md  config.json  config.py  docx_editor.py  export_pdf.py  match_client.py  match_prompts.py  openai_client.py  prompts.py  pyproject.toml  resume_reader.py  tailor_resume.py  tracker_updater.py  validate_resume_match.py
