[project]
name = "resume-modifier"
version = "0.1.0"
description = "CLI tool for tailoring a resume to a job description and exporting it to PDF with Apple Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-docx>=1.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
